# flask_learning

./: README.md  app.py  pyproject.toml
src/core/config/: __init__.py
src/core/database/: __init__.py
src/core/model/auth/: __init__.py  user.py
src/core/model/issues/: __init__.py  issue.py
src/core/seeds/: __init__.py
src/web/: __init__.py
src/web/templates/: index.html
